<resources>
    <string name="app_name">Delivery</string>
    <string name="btnNext">Next</string>
    <string name="btnCancel">Cancel</string>
    <string name="titName">Name</string>
    <string name="titPhoneNumber">Phone Number</string>
    <string name="titZone">Zone</string>
    <string name="titMotorNumber">Motor Number</string>
    <string name="btnAvalabil">Online</string>
    <string name="btnUnavalabil">Offline</string>
    <string name="msgError">Error</string>
    <string name="msg">Please Connect Internet</string>
    <string name="msgFiled">Can not Make new Regestration , Alared Exist</string>
    <string name="msgAlertisUsed">This User is Old</string>
    <string name="msgUnknow">Can\'t Access Server</string>
    <string name="btnOK">OK</string>
    <string name="msgCNot_Connect">Can\'t Accress to Server</string>
    <string name="titIDNumber">ID Number</string>
    <string name="msgCNRWName">Can\'t Regestration Without Name</string>
    <string name="msgCNRWPhone">Can\'t Regestration Without Phone</string>
    <string name="msgCNRWMotorNumber">Can\'t Regestration Without Motor Number</string>
    <string name="msgCNRWIDN">Can\'t Regestration Without ID Number</string>
    <string name="dilogWait">Please Wait...</string>
    <string name="btnLastOrders">Orders Feed</string>
    <string name="btnPontins">Pontins</string>
    <string name="title_activity_dashbord">Dashbord</string>
    <string name="mesServer">Message from Adminstration</string>
    <string name="titStatusNow">Your Status Now is :</string>
    <string name="titStatusNowOnline">Your Status Now is : Online</string>
    <string name="titStatusNowOffline">Your Status Now is : Offline</string>
    <string name="msgOpenGPS">Must Open GPS to Start Work</string>
    <string name="titYourPointsis">Your Points is</string>
    <string name="titNameService">Service Name</string>
    <string name="titAddressService">Address</string>
    <string name="titQuantaty">The quantities of Orders</string>
    <string name="titAmount">The amount</string>
    <string name="titTime">Time create</string>
    <string name="titPhone">Phone</string>
    <string name="titDone">Create Regestration is Done</string>
    <string name="msgRegDone">Regestration is Done \n Must Restart Application now...</string>
    <string name="titUpdate">Update is Done</string>
    <string name="lblNumOrder">Order Number</string>
</resources>
